--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <ul class="eve_list">
                                 <li>
                                     <a href="">
-                                        <div><img src="./imges/eve_con1.PNG" alt=""></div>
+                                        <div class="box1"><img src="./imges/eve_con1.PNG" alt=""></div>
                                         <h3>다이렉트로 부담없이 캐시백<br>
                                         혜택까지</h3>
                                         <p>2023.02.28~2023.03.31</p>
@@ -206,7 +206,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <div><img src="./imges/eve_con2.PNG" alt=""></div>
+                                        <div class="box2"><img src="./imges/eve_con2.PNG" alt=""></div>
                                         <h3>일반암 대비 3배 보장 온라인<br>
                                         암보험으로 준비</h3>
                                         <p>2023.02.28~2023.03.31</p>
@@ -214,7 +214,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <div><img src="./imges/eve_con3.PNG" alt=""></div>
+                                        <div class="box3"><img src="./imges/eve_con3.PNG" alt=""></div>
                                         <h3>걷는마큼 헤택으로 돌려주는<br>
                                         표젇항암 미니보험 상품권<br>
                                         혜택</h3>
@@ -230,19 +230,169 @@
                 </div>
                 <div class="right_box">
                     <ul class="eve_right">
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li>
+                            <a href="">
+                                <p class="txtbox">게임존</p>
+                                <h3 class="ttl">게임도하고<br>
+                                혜택도 받고!</h3>
+                                <p class="sub_txt">매일매일 다양한 혜택 받기</p>
+                                <img src="./imges/new_2204_my_r_img001.png" width="100%" height="100%" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p class="txtbox">정기결제</p>
+                                <h3 class="ttl">잊기 쉬운<br>
+                                생활요금 납부</h3>
+                                <p class="sub_txt">
+                                    자동납부로 편리하게<br>
+                                    이용하세요.</p>
+                                <img src="./imges/new_2204_my_r_img002.png" width="100%" height="100%" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p class="txtbox">자동차</p>
+                                <h3 class="ttl">
+                                    차 살 때<br>
+                                더 좋은 혜택</h3>
+                                <p class="sub_txt">
+                                    신차/중고차 구매 계획이<br>
+                                    있으시다면</p>
+                                <img src="./imges/new_2204_my_r_img004.png" width="100%" height="100%" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p class="txtbox">보험</p>
+                                <h3 class="ttl">
+                                    이제 필요한 보험은<br>
+                                    다이렉트로</h3>
+                                <p class="sub_txt">
+                                    간편한 다이렉트 가입</p>
+                                <img src="./imges/new_2204_my_r_img005.png" width="100%" height="100%" alt="">
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <div class="con4"></div>
+            <div class="my_bottom">
+                <ul class="notice_li">
+                    <li>
+                        <div>
+                            <a href="">
+                                <h3>공지사항</h3>
+                            </a>
+                            <p class="txt">삼성금융 사상 대출 광고 피해주의 안내</p>
+                            <p class="date">22.05.09</p>
+                        </div>    
+                    </li>
+                    <li>
+                        <div>
+                            <a href="">
+                                <h3>고객센터</h3>
+                            </a>
+                            <ul class="call_box">
+                                <li>
+                                    <a href="">
+                                        <img src="./imges/new_2204_my_bottom_ico001.png" alt="">
+                                        <p>자주하는 질문</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <img src="./imges/new_2204_my_bottom_ico002.png" alt="">
+                                        <p>이메일 상담</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <img src="./imges/new_2204_my_bottom_ico003.png" alt="">
+                                        <p>ARS</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="my_bottom3">
+                            <a href="">
+                                <h2>금융소비자호보포털</h2>
+                                <p class="sub_txt3">소비자 보호 정보를 한눈에!</p>
+                                <div class="img_box3"><img src="./imges/new_2204_my_bottom_img001.png" alt=""></div>
+                            </a>
+                        </div>    
+                    </li>
+                </ul>
+            </div>
         </div>
         <!-- 하단 -->
         <div id="footer">
-            <div class="footer_top"></div>
-            <div class="footer_bottom"></div>
+            <div id="footer_in">
+                <div class="footer_top">
+                    <strong>ARS(유료)</strong>
+                    <span>대표전화 1588-8700 카드신청 1688-1133 분실신고·한도승인(국내)1588-8900(해외)82-2-2000-8100, 900-1588-8700</span>
+                </div>
+                <div class="footer_bottom">
+                    <select>
+                        <option>FAMIY SITE</option>
+                    </select>
+                    <div class="f_menu">
+                        <ul>
+                            <li><strong>회사소개</strong></li>
+                            <li><a href="">ENGLISH</a></li>
+                            <li><a href="">전자민원접수</a></li>
+                            <li><a href="">이용약관</a></li>
+                            <li><a href="">고객권리 안내</a></li>
+                            <li><a href="">금융사기피해</a></li>
+                        </ul>
+                    </div>
+                    <div class="clear">    
+                        <ul>
+                            <li><strong>개인정보 처리방침</strong></li>
+                            <li><strong>위치기반서비스 이용약관</strong></li>
+                            <li><a href="">통신중개판매상품 이메일</a></li>
+                        </ul>
+                        <img><span>lifecare.scard@sansung.com</span>
+                        <a href="">사업자정보확인></a>
+                    </div>
+                    <div class="company_info">
+                        <span>대표이사 사장 김대환</span>
+                        <span>서울 중구 세종대로67(04514)</span>
+                        <span>사업자등록번호202-81-45602</span>
+                        <span>통신판매업 신고번호 제2009-서울중구-1449호</span>
+                    </div>
+                    <div class="capyright">
+                        <p>SAMSUNG CARD CO.,LTD.ALL rights reserved.</p>
+                        <h2 class="footer_logo"><img src="./imges/new_2204_f_logo.png" height="100%"></h2>
+                    </div>
+                    <div class="award_ui">
+                        <ul>
+                            <li>
+                                <a href="">
+                                    <img src="./imges/ico_f_award01_181212.jpg" alt="">
+                                    <span>한국서비스 품질지수<br>
+                                            9년 연속 1위</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imges/ico_f_award02_181212.jpg" alt="">
+                                    <span>한국 서비스만족도<br>
+                                         7년 연속 1위</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imges/ico_f_award03_181212.jpg" alt="">
+                                    <span>국가고객만족도<br>
+                                         9년 연속 1위</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>    
         </div>
     </div>
 </body>
